# ServerClientChat

./: CMakeLists.txt  README.md
include/: client.h  clientStateTranslation.h  mysqlModel.h  redisModel.h  sayHi.h  server.h
src/: CMakeLists.txt  sayHi.cpp
src/client/: CMakeLists.txt  client.cpp  clientStateTranslation.cpp  main.cpp
src/server/: CMakeLists.txt  main.cpp  mysqlModel.cpp  redisModel.cpp  server.cpp
